--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,9 +9,8 @@
 .enzo{
 position: relative;
 top: 100px;
+
 }
-.user singup{
-position: relative;
-top: 100px;
-	
+.user_signup{
+	margin-bottom: 15px;
 }
