--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,16 +1,19 @@
 <div class="main posts-show">
   <div class="container">
+  	<div class="post">
+  		<%= link_to(@user.name,"/users/#{@user.id}") %>
+  	</div>
     <div class="posts-show-item">
       <p>
-        <!-- 以下の1行を<%= %>を用いて書き換えてください -->
      <%= @post.content %>
       </p>
        <div class="post-time">
-        <!-- @postのcreated_atカラムのデータを表示してください -->
         <%= @post.created_at %>
       </div>
     </div>
+    <% if @post.user_id== @current_user.id  %>
     <%= link_to("edit","/posts/#{@post.id}/edit") %>
-    <%= link_to("destroy","/posts/#{@post.id}/destroy",{method: "post"}) %>
-  </div>
+    <%= link_to("delete","/posts/#{@post.id}/destroy",{method: "post"}) %>
+    <% end %>
+    </div>
 </div>
