--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,14 @@
 
-<div class="main posts-index">
-  <div class="container">
     <% @posts.each do |post| %>
-      <div class="posts-index-item">
-        <%= link_to(post.content,"/posts/#{post.id}")%>
-      </div>
+  <div class="yes">
+        <div class="image_name">
+          <img src="<%= "/user_images/#{post.user.image_name}" %>">
+        </div>
+            <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+          </div>
+          <div class="ppost">
+          <%= link_to(post.content, "/posts/#{post.id}") %>
+        </div>
+      
     <% end %>
-  </div>
-</div>
+    
