--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,6 +6,8 @@
 <input name="name" value="<%= @user.name %>">
 <p>user email</p>
 <input name="email" value="<%= @user.email %>">
+<p>password</p>
+<input type="password" name="password">
 <p>image</p>
 <input type="file" name="image">
 <input type="submit" value="reupload">
