--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,22 @@
+<div class="signup_1">
 <div class="name"><%= @user.name %></div>
 <div class="email"><%= @user.email %></div>
 <div class="image_name"> 
 <img src="<%= "/user_images/#{@user.image_name}" %>">
 </div>
+</div>
+ <% if @user.id== @current_user.id  %>
 <%= link_to("user edit","/users/#{@user.id}/edit") %>
+<% end %>
+<% @user.posts.each do |post| %>
+  <div class="yes">
+        <div class="image_name">
+          <img src="<%= "/user_images/#{post.user.image_name}" %>">
+        </div>
+            <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+          </div>
+          <div class="ppost">
+          <%= link_to(post.content, "/posts/#{post.id}") %>
+        </div>
+      
+    <% end %>
